--- a/pmAPI/api/requirements.txt
+++ b/pmAPI/api/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django==5.1.2
+django-cors-headers==4.6.0
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
 pillow==11.0.0
